[build-system]
requires = ['setuptools>=64', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'aoc'
version = '2.0.0'
description = 'Advent of Code programming puzzles by Rudy Puig.'
license = { file = 'LICENSE.txt' }
readme = 'README.md'
authors = [{ name = 'Rodolfo Puig', email = 'rodolfo@puig.io' }]
requires-python = '~= 3.10'

[project.optional-dependencies]
dev = [
  'ruff ~= 0.4.7',
  'mypy ~= 1.10.0',
]
test = [
  'pytest >= 6.0, != 8.1.*',
  'pytest-checkdocs >= 2.4',
  'pytest-cov',
  'pytest-mypy',
  'pytest-ruff',
  'covdefaults',
  'docutils',
]

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']
include = ['aoc']
exclude = ['docs', 'tests']
namespaces = false

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = 'py310'

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
ignore = []
select = [
    'B904',
    'E4',
    'E7',
    'E9',
    'F',
    'PT009',
    'TRY201',
    'RUF200',
]
extend-select = ['I']
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ['ALL']
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$'

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = false
force-sort-within-sections = false
# force-single-line = true
known-first-party = ['aoc']
known-third-party = []
lines-after-imports = 2
lines-between-types = 1
# order-by-type = false
no-lines-before = ['future', 'standard-library']
single-line-exclusions = ['typing']
section-order = [
    'future',
    'standard-library',
    'third-party',
    'first-party',
    'local-folder',
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = 'double'
# Like Black, indent with spaces, rather than tabs.
indent-style = 'space'
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = 'auto'
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = false
# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = 'dynamic'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = ['--strict-config', '--strict-markers', '-rpfE', '-q']
testpaths = ['tests']
xfail_strict = true

[tool.coverage.run]
branch = true
parallel = true
plugins = ['covdefaults']
source = ['aoc', 'tests']

[tool.coverage.paths]
build = [
  'src',
  '*/site-packages',
  '*\site-packages',
]

[tool.coverage.report]
fail_under = 90.0
ignore_errors = true
show_missing = true
skip_covered = true
skip_empty = true
omit = [
  'tests/*',
]
exclude_lines = []

[tool.coverage.html]
show_contexts = true
